# ems-esp-fw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ems_update.py  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: build_main.yml  deploy_releases.yml
components/max5815/: CMakeLists.txt  max5815.c  max5815.h  max5815_sine.c  max5815_sine.h
components/ssd1306/: CMakeLists.txt  Kconfig.projbuild  ssd1306.c  ssd1306.h  ssd1306_i2c_legacy.c
main/: CMakeLists.txt  Kconfig.projbuild  ble_service.c  ble_service.h  blehr_sens.h  device_sm.c  device_sm.h  ems_ble_ota.c  ems_ble_ota.h  ems_setup.h  extra_tasks.c  extra_tasks.h  gatt_svr.c  gatt_svr.h  hrm.c  hrm.h  i2c_master.c  i2c_master.h  idf_component.yml  main.c  max30100_test_app.c  pwr_button.c  pwr_button.h  ssd1306_display.c  ssd1306_display.h
